fix footer text on small devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,7 @@
   padding: var(--padding-base) calc(var(--padding-base)* 10);
   * {
     justify-self: left;
+    text-align: right;
   }
 }
 
